muchas is online and fix margin on mobile

--- a/assets/scss/main-style.scss
+++ b/assets/scss/main-style.scss
@@ -29,13 +29,8 @@ $screen-sm-min: 600px;
 .pwdd-section-wrapper {
 	padding: 100px 0;
 	@media (max-height: 590px) {
-		margin-left: 20px;
+		margin-left: 70px;
 		margin-right: 20px;
-	}
-	@media (max-width: 991px) {
-		margin-left: 60px;
-		margin-right: 20px;
-		position: relative;
 	}
 }
 
